made leftside logic for options for  not loggedin,made folder for channel page,made folder for create dropdown

--- a/global/dropdown/style.css
+++ b/global/dropdown/style.css
@@ -92,6 +92,8 @@
 .d-cross{
     height: 35px !important;
     width: 35px !important;
-    top: -10px !important;
-    right: 10px;
+    position: absolute !important;
+    top: 7px !important;
+    right: 16px;
+    left: auto !important;
 }
