--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   #logo{
     display: inline-block;
     margin-bottom: 10px;
-    margin-left: 25%;
+    margin-left: 23%;
     cursor: pointer;
     font-size: 27px;
   }
@@ -56,9 +56,10 @@
   }
 
   #i3,#i6,#i4,#i5{
-    font-size: 15px;
+    font-size: 18px;
     display: inline-block;
     cursor: pointer;
+    margin: 0 6px;
   }
 
   #i4{
@@ -375,4 +376,41 @@
   z-index:7;
   transition: all 2s;
   cursor: default;
+}
+
+.leftsignin{
+  margin: 20px 0;
+}
+
+.leftsignin p{
+  color: black;
+  font-size: 14px;
+}
+
+.leftsignin .signin{
+  width: 54%;
+  float: initial;
+  margin-left: 13px;
+  padding: 6px;
+}
+
+.leftsignin .signin p{
+  font-size: 17px;
+  margin-left: -6px  !important;
+}
+
+.leftsignin lord-icon{
+  margin-right: 11px;
+}
+
+.endInfo p{
+  margin: 5px 0;
+  font-size: 12px;
+  color: #606060;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.endInfo p:nth-child(1){
+margin: 10px 0;
 }
