--- a/global/dropdown/style.css
+++ b/global/dropdown/style.css
@@ -48,9 +48,10 @@
 }
 
 .Account-refer{
+    font-size: 16px;
     position: relative;
-    top: 29px;
-    left: -63px;
+    top: 25px;
+    left: -73px;
     text-decoration: none;
     color: blue; 
 }
